Reactjs mobile view items alignment fixed

--- a/frontend/src/App.styl
+++ b/frontend/src/App.styl
@@ -1,4 +1,4 @@
-/* placed all in one style file. Usally each component should have it's own style file.*/
+/* placed all in one style file. Usually each component should have it's own style file.*/
 @import url('https://fonts.googleapis.com/css?family=Cairo:400,700')
 
 primary-color = #3ea5e6
@@ -110,6 +110,8 @@ header
           display block
           font-size 1rem
           font-weight normal
+          word-wrap break-word
+          word-break break-word
       &:last-child::after
         content ''
         width 32%
